Clean up compiler and implement parallelization in processing of elements