@@ -29,7 +29,7 @@ public class TestExtensionAvailable
     public void testServiceAvailable()
     {
         List<LegendPureCoreExtension> extensions =  PureCoreExtensionLoader.extensions();
-        Assert.assertEquals(1, extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
-        Assert.assertEquals("Service", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
+        Assert.assertEquals(1, extensions.get(0).extraPureCoreExtensions(PureModel.getCorePureModel().getExecutionSupport()).size());
+        Assert.assertEquals("Service", extensions.get(0).extraPureCoreExtensions(PureModel.getCorePureModel().getExecutionSupport()).getFirst()._type());
     }
 }
